MDEV-21217 innodb_force_recovery=2 may wrongly abort rollback

trx_roll_must_shutdown(): Correct the condition that detects
the start of shutdown.